--- a/simplestylesheet.css
+++ b/simplestylesheet.css
@@ -95,3 +95,12 @@ a:hover {
   background-color: #c3b1a5;
 }
 
+
+@media screen and (max-width: 800px) {
+	body{
+  	padding: 0 5% 0 5%;
+
+	}
+  
+}
+
