added ubuntu font

--- a/simplestylesheet.css
+++ b/simplestylesheet.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 .header, .footer {
   background-color: #2e2222;
