--- a/simplestylesheet.css
+++ b/simplestylesheet.css
@@ -46,7 +46,7 @@ body{
 
 
 h1 {
-  font-family: Ubuntu, sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 2.5rem;
   color: #ba481d;
   padding: 0% 0% 0% 0%;
