--- a/simplestylesheet.css
+++ b/simplestylesheet.css
@@ -67,7 +67,7 @@ h2 {
 }
 
 p {
-  font-family: Ubuntu, sans-serif;
+  font-family: Trebuchet MS, sans-serif;
   font-size: 1.2rem;
   color: #392f2f;
   padding: 0% 5% 0% 5%;
