--- a/simplestylesheet.css
+++ b/simplestylesheet.css
@@ -97,6 +97,13 @@ a:hover {
   background-color: #c3b1a5;
 }
 
+.logocenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+}
+
 
 @media screen and (max-width: 800px) {
 	body{
